--- a/client/index.html
+++ b/client/index.html
@@ -32,20 +32,13 @@
 <script src="./src/easeljs/Enemy.js"></script>
 <script src="./src/easeljs/Player.js"></script>
 <script src="./src/easeljs/Level.js"></script>
-<script src="./src/easeljs/PlatformerGame.js"></script>
+<script src="./src/easeljs/GameManager.js"></script>
 
 <script>
 var canvas;
 var stage = null;
-var contentManager;
-var platformerGame;
 var globalCanvasContext;
-var enableShadows = true;
-var enableRAF = true;
 
-// Specific IE9 pinned site experience
-// Buttons displayed in the thumnbail preview in the taskbar
-var ieBtnLeft, ieBtnRight, ieBtnJump;
 
 window.Socket = io.connect(':4430', {secure: false});
 window.Socket.on('connect', function () {
@@ -61,92 +54,28 @@ function restart() {
 		//find canvas and load images, wait for last image to load
 		canvas = document.getElementById("platformerCanvas");
 		globalCanvasContext = canvas.getContext("2d");
-
-		// create a new stage and point it at our canvas:
 		stage = new Stage(canvas);
-
-		// downloading all needed images ressources and preloading sounds & music 
-		contentManager = new ContentManager(stage, canvas.width, canvas.height);
-		contentManager.setDownloadCompletionCallback(startGame);
-		contentManager.startDownload();
-	}
-	else {
-		platformerGame.ReloadCurrentLevel();
-	}
-}
-
-// Simuate keypress for touch devices & for the IE9 pinned thumbnail buttons
-function jumpKey() {
-    platformerGame.handleKeyDown({ "keyCode": 87 });
-    setTimeout("platformerGame.handleKeyUp({ \"keyCode\": 87 })", 20);
-}
-
-function leftKey() {
-	platformerGame.handleKeyDown({ "keyCode": 37 });
-}
-
-function rightKey() {
- 	platformerGame.handleKeyDown({ "keyCode": 39 });
-}
-
-function changeShadows() {
-	enableShadows = !enableShadows;
-}
-
-function changeRAF() {
-    enableRAF = !enableRAF;
-    Ticker.useRAF = enableRAF;
-}
-
-// Callback function once everything has been downloaded
-function startGame() {
-    platformerGame = new PlatformerGame(stage, contentManager, canvas.width, canvas.height);
-    platformerGame.StartGame();
-}
-
-//********************************************************
-// Specific code for IE9+ for the pinned mode experience
-function setIE9PinnedModeExperience() {
-    try {
-        document.addEventListener('msthumbnailclick', processSelection, false);
-
-        ieBtnLeft = window.external.msSiteModeAddThumbBarButton('icons/ie9left.ico', 'Left');
-        ieBtnJump = window.external.msSiteModeAddThumbBarButton('icons/ie9jump.ico', 'Jump');
-        ieBtnRight = window.external.msSiteModeAddThumbBarButton('icons/ie9right.ico', 'Right');
-
-        window.external.msSiteModeShowThumbBar();
     }
-    catch(e) { }
+
+    // downloading all needed images ressources and preloading sounds & music
+    window.Game = {}
+    window.Game.Content = new ContentManager(canvas.width, canvas.height);
+    window.Game.Manager = new GameManager(stage, canvas.width, canvas.height);
+    window.Game.Content.setContentStatusCallback(window.Game.Manager.contentStatusChanged);
+    window.Game.Content.startDownload();
 }
 
-function processSelection(btn) {
-    switch (btn.buttonID) {
-        case ieBtnLeft:
-            leftKey();
-            break;
 
-        case ieBtnRight:
-            rightKey();
-            break;
-
-        case ieBtnJump:
-            jumpKey();
-            break;
-    }
-}
 //********************************************************
 </script>
 </head>
-	
-<body onload="setIE9PinnedModeExperience();">
+
+<body>
 	<div class="canvasHolder">
 		<canvas id="platformerCanvas" width="800" height="480" style="background-color:black">
 			Your browser doesn't support canvas. Please download IE9+ on <a href="http://ie.microsoft.com/testdrive">IE Test Drive</a> 
 		</canvas>
 	</div>
-	<button id="Start" onclick=restart();>(Re)Start</button><button id="Left" onclick=leftKey();>&lt;--</button>
-	<button id="Jump" onclick=jumpKey();>jump (W)</button><button id="Right" onclick=rightKey();>--&gt;</button>
-	<input id="handleShadows" type="checkbox" checked="checked" onclick="changeShadows();">Shadows (must restart)</input>
-    <input id="useRAF" type="checkbox" checked="checked" onclick="changeRAF();">requestAnimationFrame</input>
+	<button id="Start" onclick=restart();>(Re)Start</button>
 </body>
 </html>
