--- a/client/index.html
+++ b/client/index.html
@@ -64,7 +64,7 @@
     window.Socket = io.connect(':4430', {secure: false});
     window.Socket.on('connect', function () {
         console.log('Socket.io Connection Established.');
-        window.Socket.emit('join', { username: 'default' })
+        window.Socket.emit('auth', { username: 'default', password: '' })
     });
     window.Socket.on('disconnect', function () {
         console.log('Socket.io Connection Lost. Trying to reconnect...');
