--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
   <script>
       createjs = window;
   </script>
+  <script type="text/javascript" src="./src/async.js"></script>
 
   <script src="./src/jquery.js"></script>
   <script src="./src/easeljs.js"></script>
@@ -13,14 +14,17 @@
   <script src="./src/bootstrap.js"></script>
   <script src="./src/bootstrap-colorpicker.js"></script>
 
+  <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" />
+  <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1/jquery-ui.min.js"></script>
+
+
   <script src="./src/easeljs/XNARectangle.js"></script>
   <script src="./src/easeljs/PlatformerHelper.js"></script>
   <script src="./src/easeljs/ContentManager.js"></script>
   <script src="./src/easeljs/Sprite.js"></script>
+  <script src="./src/easeljs/ActorDefinition.js"></script>
   <script src="./src/easeljs/ProgrammableSprite.js"></script>
   <script src="./src/easeljs/Tile.js"></script>
-  <script src="./src/easeljs/Gem.js"></script>
-  <script src="./src/easeljs/Enemy.js"></script>
   <script src="./src/easeljs/Player.js"></script>
   <script src="./src/easeljs/Level.js"></script>
   <script src="./src/easeljs/LibraryManager.js"></script>
@@ -29,8 +33,10 @@
   <script src="./src/easeljs/PixelArtCanvas.js"></script>
 
   <script src="./src/angular.js"></script>
+  <script src="./src/angular/directives.js"></script>
   <script src="./src/angular/rules_controller.js"></script>
   <script src="./src/angular/pixel_art_controller.js"></script>
+  <script src="./src/angular/library_controller.js"></script>
 
   <link href="/css/bootstrap.min.css" rel="stylesheet" media="screen">
   <link href="/css/editor.css" rel="stylesheet" media="screen">
@@ -88,8 +94,7 @@
   </script>
 </head>
 
-<body onload="start()" ng-app>
-
+<body onload="start()" ng-app="App">
 
 <div class="navbar navbar-inverse navbar-static-top">
   <div class="navbar-inner">
@@ -116,39 +121,72 @@
   <div class="row">
     <div class="span10">
       <div class="canvasHolder">
-        <canvas id="platformerCanvas" width="800" height="530" style="background-color:black">
+        <canvas droppable id="platformerCanvas" width="800" height="530" style="background-color:black">
           Your browser doesn't support HTML5 Canvas!
         </canvas>
       </div>
     </div>
 
     <div class="span4" ng-controller="RulesCtrl">
-      <div class="well">
-
-      <ul class="unstyled">
-        <li class="rule" ng-repeat="rule in rules()">
-          <div class="name">{{rule.name}}</div>
-          <div class="divider">When:</div>
-          <ul>
-            <li ng-repeat="trigger in rule.triggers">
-              <span class="condition">Key Pressed</span>
-              <span class="condition-value">{{trigger.code}}</span>
-            </li>
-          </ul>
-
-          <div class="divider">Then:</div>
-          <div class="scenario">
-            <img ng-src="{{scenario_before_url(rule)}}"/>
-            <div class="arrow">-></div>
-            <img ng-src="{{scenario_after_url(rule)}}"/>
-          </div>
-
-        </li>
+      <ul class="nav nav-tabs">
+        <li><a href="#rules" data-toggle="tab">Rules</a></li>
+        <li><a href="#variables" data-toggle="tab">Variables</a></li>
       </ul>
 
+      <div class="tab-content">
+        <div class="tab-pane active" id="rules">
+          <ul class="unstyled">
+            <li class="rule" ng-repeat="rule in rules()">
+              <div class="name">{{rule.name}}</div>
+              <div class="divider">When:</div>
+              <ul>
+                <li ng-repeat="trigger in rule.triggers">
+                  <span class="condition">Key Pressed</span>
+                  <span class="condition-value">{{trigger.code}}</span>
+                </li>
+              </ul>
+
+              <div class="divider">Then:</div>
+              <div class="scenario">
+                <img ng-src="{{scenario_before_url(rule)}}"/>
+                <div class="arrow">-></div>
+                <img ng-src="{{scenario_after_url(rule)}}"/>
+              </div>
+            </li>
+          </ul>
+        </div>
+
+        <div class="tab-pane" id="variables">
+          <ul class="unstyled">
+            <li class="variable" ng-repeat="variable in variables()">
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
+
+</div>
+
+
+<div id="library" ng-controller="LibraryCtrl">
+  <div id="definitions" style="width:500px; float:left;">
+    <h4>{{library_name}}</h4>
+    <div draggable ng-repeat="def in definitions()" data-identifier="{{def.identifier}}">
+      <i style="{{cssForSprite(def)}}"></i>
+      <div>{{def.identifier}}</div>
+    </div>
+  </div>
+
+  <div id="animations" style="width:300px; float:left;">
+    <h4>Appearances</h4>
+    <div draggable ng-repeat="(name,coords) in selected_animations()" ng-dblclick="edit_animation(name,coords)">
+      <i style="{{cssForSprite(selected_definition(), coords[0], coords[1])}}"></i>
+      <div>{{name}}</div>
+    </div>
+  </div>
+
+  <div style="clear:both;"></div>
 
 </div>
 
@@ -157,13 +195,11 @@
   Your browser doesn't support HTML5 Canvas!
 </canvas>
 
+
 <div ng-controller="PixelArtCtrl">
 
-  <!-- Button to trigger modal -->
-  <a href="#myModal" role="button" class="btn" data-toggle="modal" data-ng-click="open_editor()">Launch demo modal</a>
-   
   <!-- Modal -->
-  <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="width:671px;">
+  <div id="pixelArtModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="width:671px;" data-backdrop="static">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
       <h3 id="myModalLabel">Modal header</h3>
@@ -216,13 +252,14 @@
         <ul>
           <li class="disabled"><a href="#">&laquo;</a></li>
           <li class="active"><a href="#">1</a></li>
+          <li><a href="#" data-ng-click="move_editor_to_tile(1,0)">1</a></li>
         </ul>
       </div>
 
     </div>
     <div class="modal-footer">
       <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-      <button class="btn btn-primary">Save changes</button>
+      <button class="btn btn-primary" data-dismiss="modal" data-ng-click="save_editor()">Save Changes</button>
     </div>
   </div>
 </div>
