--- a/client/index.html
+++ b/client/index.html
@@ -172,7 +172,7 @@
     <div id="definitions" style="width:500px; float:left;">
       <h4>{{library_name}}</h4>
       <div ng-repeat="def in definitions()" data-ng-click="select_definition(def)" class="{{class_for_definition(def)}}">
-        <i draggable data-identifier="{{def.identifier}}" style="{{css_for_sprite_frame(def)}}"></i>
+        <i draggable data-identifier="actor:{{def.identifier}}" style="{{css_for_sprite_frame(def)}}"></i>
         <input class="name" data-ng-model="def.name" data-ng-blur="save_definition(def)" />
       </div>
 
@@ -183,7 +183,7 @@
     <div id="appearances" style="width:300px; float:left;">
       <h4>Appearances</h4>
       <div ng-repeat="(name,frames) in selected_appearances()" ng-dblclick="edit_appearance(name, frames[0])">
-        <i draggable style="{{css_for_sprite_frame(selected_definition(), frames[0])}}"></i>
+        <i draggable data-identifier="appearance:{{name}}" style="{{css_for_sprite_frame(selected_definition(), frames[0])}}"></i>
         <input class="name" data-ng-model="name" data-ng-blur="save_definition()" />
       </div>
     </div>
