--- a/client/index.html
+++ b/client/index.html
@@ -128,31 +128,34 @@
 
     <ng-switch on="struct.type">
 
-    <div ng-switch-when="group-event" class="event">
+    <div ng-switch-when="group-event" class="rule-container event">
+      <div data-ng-click="toggle_disclosed(struct)" class="triangle {{struct.disclosed}}"></div>
       <div class="name">{{struct.event}}</div>
-      <ul class="unstyled">
+      <ul class="unstyled" data-ng-hide="struct.disclosed">
         <li ng-repeat="struct in struct.rules" ng-include="'rule_template.html'"></li>
       </ul>
     </div>
 
-    <div ng-switch-when="group-flow" class="group">
+    <div ng-switch-when="group-flow" class="rule-container group">
+      <div data-ng-click="toggle_disclosed(struct)" class="triangle {{struct.disclosed}}"></div>
       <div class="name">{{struct.behavior}}</div>
-      <ul class="unstyled">
+      <ul class="unstyled" data-ng-hide="struct.disclosed">
         <li ng-repeat="struct in struct.rules" ng-include="'rule_template.html'"></li>
       </ul>
     </div>
 
-    <div ng-switch-default class="rule" data-ng-show="!struct.type">
+    <div ng-switch-default class="rule-container rule" data-ng-show="!struct.type">
       <div class="scenario">
         <img ng-src="{{scenario_before_url(struct)}}"/>
         <div class="arrow">-></div>
         <img ng-src="{{scenario_after_url(struct)}}"/>
       </div>
 
-      <div class="name">{{struct.name}}</div>
+      <div data-ng-click="toggle_disclosed(struct)" class="triangle {{struct.disclosed}}"></div>
+      <input class="name" data-ng-model="struct.name" />
 
-      <ul class="unstyled">
-        <li ng-repeat="action in struct.actions">
+      <ul class="unstyled" data-ng-show="!struct.disclosed && actions_for_rule(struct).length">
+        <li ng-repeat="action in actions_for_rule(struct)" class="action">
           <span class="condition-value">{{action}}</span>
         </li>
       </ul>
@@ -171,7 +174,7 @@
 
     <div class="tab-content">
       <div class="tab-pane active" id="rules">
-        <ul class="unstyled">
+        <ul class="unstyled rules-list">
           <li ng-repeat="struct in rules()" ng-include="'rule_template.html'"></li>
         </ul>
       </div>
@@ -189,7 +192,10 @@
   <!-- Begin Library Controller -->
   <div id="library" ng-controller="LibraryCtrl">
     <div id="definitions" class="white-box" style="width:490px; float:left;">
+
+      <div class="btn btn-mini" style="float:right;" data-ng-click="add_definition()"><i class="icon-plus"></i></div>
       <h4>{{library_name}}</h4>
+
       <div data-ng-show="definitions().length == 0" class="empty-message">
         You haven't defined any actors yet! Create a new actor by clicking the '+' icon.
       </div>
@@ -198,11 +204,12 @@
         <input class="name" data-ng-model="def.name" data-ng-blur="save_definition(def)" />
       </div>
 
-      <div class="btn" data-ng-click="add_definition()">Add</div>
 
     </div>
 
     <div id="appearances" class="white-box" style="width:290px; float:left;">
+
+      <div class="btn btn-mini" style="float:right;" data-ng-click="add_appearance()"><i class="icon-plus"></i></div>
       <h4>Appearances</h4>
       <div data-ng-show="appearances().length == 0" class="empty-message">
         Select an actor in your library to view it's appearances.
@@ -213,11 +220,9 @@
       </div>
     </div>
 
-    <div class="btn" data-ng-click="add_appearance()">Add</div>
-
     <div style="clear:both;"></div>
 
-    <div id="trashcan" droppable class="btn">Trash</div>
+    <div id="trashcan" droppable class="btn"><i class="icon-trash"></i></div>
 
   </div>
   <!-- End Library Controller -->
